Fix font-sizes, line-heights and spacing issues for columns block

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -170,13 +170,26 @@
 
 /* Column alignment - End */
 
-.columns h2 {
-  font-weight: 400;
-  text-transform: uppercase;
+.columns.columns.columns-2-cols > div > div {
+  margin-bottom:var(--regular);
 }
 
-.columns h2 strong {
+.columns.columns-2-cols > div h2 {
+  font-size:var(--h2-base);
+  line-height: 112%;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin:0
+}
+
+.columns.columns-2-cols > div h2 > strong {
   font-weight: 700;
+}
+
+.section .columns.columns-2-cols > div > div > p {
+  font-size:var(--body-large);
+  line-height: 125%;
+  margin:0
 }
 
 @media (width >= 1024px) {
